--- a/index2.html
+++ b/index2.html
@@ -3,73 +3,139 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>FreeFlow — tryb testowy (voice)</title>
+<title>FreeFlow — voice + kropla</title>
 <style>
-:root{ --bg:#0b0c10; --card:#13151b; --txt:#f1f1f1; --accent:#ffb300; --accent2:#00e5ff; }
+:root{ --bg:#0b0c10; --txt:#f1f1f1; --accent:#00e5ff; --accent2:#ffb300; }
 *{box-sizing:border-box;-webkit-tap-highlight-color:transparent}
 html,body{height:100%}
-body{ margin:0; color:var(--txt);
+body{
+  margin:0; color:var(--txt);
   background: radial-gradient(1200px 800px at 50% 20%, #141824, var(--bg));
-  font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; overflow:hidden; }
+  font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+  overflow:hidden;
+}
 
-/* Top */
-.topbar{ position:fixed; inset:0 0 auto 0; height:56px; display:flex; align-items:center; justify-content:space-between;
-  padding:0 12px; z-index:3000; background:linear-gradient(180deg, rgba(10,10,15,.92), rgba(10,10,15,.55));
-  backdrop-filter: blur(8px); border-bottom:1px solid rgba(255,255,255,.06); }
+/* Pasek u góry */
+.topbar{
+  position:fixed; inset:0 0 auto 0; height:56px; z-index:3000;
+  display:flex; align-items:center; justify-content:space-between;
+  padding:0 12px; background:linear-gradient(180deg, rgba(10,10,15,.92), rgba(10,10,15,.55));
+  backdrop-filter: blur(8px); border-bottom:1px solid rgba(255,255,255,.06);
+}
 .brand{font-weight:800; letter-spacing:.5px}
 .top-actions{display:flex; gap:8px}
-.icon-btn{ height:36px; min-width:40px; padding:0 10px; border:0; border-radius:10px; background:#1f2330; color:var(--txt); font-size:18px; cursor:pointer; }
+.icon-btn{
+  height:36px; min-width:40px; padding:0 10px; border:0; border-radius:10px;
+  background:#1f2330; color:var(--txt); font-size:18px; cursor:pointer;
+}
 .icon-btn:active{transform:translateY(1px)}
-.badge{font-size:12px;background:var(--accent);color:#1a1a1a;padding:1px 6px;border-radius:999px;margin-left:4px}
+.badge{font-size:12px;background:var(--accent2);color:#1a1a1a;padding:1px 6px;border-radius:999px;margin-left:4px}
 
 /* Menu */
-.dropdown{ position:fixed; top:60px; right:10px; z-index:2500; display:none; flex-direction:column; gap:8px;
-  background:var(--card); padding:10px; border-radius:14px; border:1px solid rgba(255,255,255,.08); box-shadow:0 10px 30px rgba(0,0,0,.35); }
+.dropdown{
+  position:fixed; top:60px; right:10px; z-index:2500; display:none; flex-direction:column; gap:8px;
+  background:#141724; padding:10px; border-radius:14px; border:1px solid rgba(255,255,255,.08);
+  box-shadow:0 10px 30px rgba(0,0,0,.35);
+}
 .dropdown.open{display:flex}
-.dropdown button{ background:#202433; color:var(--txt); border:0; border-radius:10px; padding:10px 12px; cursor:pointer; text-align:left; }
+.dropdown button{
+  background:#202433; color:var(--txt); border:0; border-radius:10px; padding:10px 12px; cursor:pointer; text-align:left;
+}
 .dropdown button:hover{background:#2a2f42}
 
-/* Logo */
-.logo-wrap{ position:fixed; top:72px; left:50%; transform:translateX(-50%); width:min(76vw,380px); aspect-ratio:2/3; z-index:2000;
-  animation:drop 800ms cubic-bezier(.2,.8,.2,1) both; filter: drop-shadow(0 10px 20px rgba(0,0,0,.6)); }
-.logo-svg{width:100%; height:100%}
-
-/* Rings */
-.rings{ position:absolute; inset:-8% -6% -6% -6%; pointer-events:none; opacity:0; transition:opacity .25s ease; }
-.ring{ position:absolute; inset:0; border-radius:50%; border:2px solid rgba(0,229,255,.55); transform:scale(.85);
-  animation:spin 6s linear infinite, breathe 2.6s ease-in-out infinite; mix-blend-mode:screen; }
-.ring.r2{animation-delay:.6s; opacity:.8}
-.ring.r3{animation-delay:1.2s; opacity:.6}
-
-/* Recording state */
-.recording .logo-wrap{animation:none}
-.recording .rings{opacity:1}
-.recording .ring{ box-shadow:0 0 24px rgba(0,229,255,.35), inset 0 0 18px rgba(0,229,255,.2); }
-.recording .logo-wrap{ filter: drop-shadow(0 0 22px rgba(0,229,255,.45)); }
-
-/* Click pulse */
-.clicked .logo-wrap{animation:pulse 500ms ease-out}
-
-/* Bottom bar */
-.bottom-bar{ position:fixed; left:50%; transform:translateX(-50%); bottom:14px; z-index:2200; display:flex; gap:10px; padding:6px 8px;
-  background:rgba(10,10,16,.6); backdrop-filter: blur(10px); border:1px solid rgba(255,255,255,.08); border-radius:16px; }
-.pill{ border:0; border-radius:999px; padding:10px 14px; font-weight:700; cursor:pointer; background:linear-gradient(180deg,#ffc400,#ff8f00); color:#1a1a1a; }
-.pill:active{transform:translateY(1px)}
-
-/* Toast autoplay */
-.toast{ position:fixed; left:50%; transform:translateX(-50%); top:64px; z-index:2600; background:#222632; color:var(--txt);
-  border:1px solid rgba(255,255,255,.1); padding:10px 14px; border-radius:12px; font-size:14px; display:none; }
+/* BANER do odblokowania autoplay */
+.toast{
+  position:fixed; left:50%; transform:translateX(-50%); top:64px; z-index:2600;
+  background:#222632; color:var(--txt); border:1px solid rgba(255,255,255,.1);
+  padding:10px 14px; border-radius:12px; font-size:14px; display:none;
+}
 .toast.show{display:block}
 
-/* Animations */
-@keyframes drop{ 0%{transform:translate(-50%,-60px) scale(.7);opacity:0} 100%{transform:translate(-50%,0) scale(1);opacity:1} }
-@keyframes pulse{ 0%{transform:translateX(-50%) scale(1);filter:drop-shadow(0 0 0 rgba(255,180,0,0))}
-  50%{transform:translateX(-50%) scale(1.06);filter:drop-shadow(0 0 18px rgba(255,180,0,.55))}
-  100%{transform:translateX(-50%) scale(1);filter:drop-shadow(0 0 0 rgba(255,180,0,0))} }
-@keyframes spin{to{transform:rotate(360deg) scale(1)}}
-@keyframes breathe{0%,100%{transform:scale(.9)} 50%{transform:scale(1.02)}}
+/* ---- KROPLA ---- */
+:root{ --logo-url: url("https://raw.githubusercontent.com/ndoemo02/Freeflo/main/Freeflow-logo.png"); }
 
-@media (max-width:400px){ .logo-wrap{width:78vw} .pill{padding:10px 12px; font-size:15px} }
+.logo-zone{
+  position:fixed; top:72px; left:50%; transform:translateX(-50%);
+  width:min(76vw,380px); aspect-ratio:2/3; z-index:2000;
+  filter: drop-shadow(0 10px 20px rgba(0,0,0,.6));
+}
+
+/* Sam obraz jako maska – wycina wszystko w kształt kropli */
+.droplet{
+  position:absolute; inset:0; 
+  background: var(--txt);
+  -webkit-mask-image: var(--logo-url);
+  mask-image: var(--logo-url);
+  -webkit-mask-repeat:no-repeat; mask-repeat:no-repeat;
+  -webkit-mask-position:center; mask-position:center;
+  -webkit-mask-size:contain; mask-size:contain;
+  /* filtr SVG: usuń czarne tło z PNG (robimy to poprzez nałożenie obrazu <img> z filtrem pod spodem) */
+}
+
+/* Podkład: obraz z filtrem progu czerni (dla kompatybilności) */
+.logo-svg{
+  position:absolute; inset:0; width:100%; height:100%;
+}
+
+/* Fale/obramówka w KSZTAŁCIE KROPLI — trzy warstwy */
+.wave, .wave::before, .wave::after{
+  content:""; position:absolute; inset:0;
+  -webkit-mask-image: var(--logo-url);
+  mask-image: var(--logo-url);
+  -webkit-mask-repeat:no-repeat; mask-repeat:no-repeat;
+  -webkit-mask-position:center; mask-position:center;
+  -webkit-mask-size:contain; mask-size:contain;
+  pointer-events:none;
+}
+.wave{ opacity:0; transition:opacity .25s ease; }
+.wave::before, .wave::after{
+  border-radius:0; /* kształt daje maska logo */
+}
+
+/* Obwódka: robimy neon po obrysie przez „ramkę” paddingową i cienie */
+.wave::before{
+  background: transparent;
+  box-shadow: 0 0 24px rgba(0,229,255,.35), inset 0 0 18px rgba(0,229,255,.2);
+  transform: scale(1.015);
+  animation: breathe 2.4s ease-in-out infinite;
+}
+.wave::after{
+  background: transparent;
+  box-shadow: 0 0 28px rgba(0,229,255,.45), inset 0 0 22px rgba(0,229,255,.28);
+  transform: scale(1.04);
+  animation: spin 6s linear infinite;
+}
+
+/* Stan nagrywania = fale widoczne i neon */
+.recording .wave{ opacity:1 }
+.clicked .logo-zone{ animation:pulse 500ms ease-out }
+
+/* Dolny pasek */
+.bottom-bar{
+  position:fixed; left:50%; transform:translateX(-50%); bottom:14px; z-index:2200;
+  display:flex; gap:10px; padding:6px 8px;
+  background:rgba(10,10,16,.6); backdrop-filter: blur(10px);
+  border:1px solid rgba(255,255,255,.08); border-radius:16px;
+}
+.pill{
+  border:0; border-radius:999px; padding:10px 14px; font-weight:700; cursor:pointer;
+  background:linear-gradient(180deg,#ffc400,#ff8f00); color:#1a1a1a;
+}
+.pill:active{transform:translateY(1px)}
+
+/* Animacje */
+@keyframes pulse{
+  0%{ transform:translateX(-50%) scale(1); filter:drop-shadow(0 0 0 rgba(0,229,255,0)) }
+  50%{ transform:translateX(-50%) scale(1.06); filter:drop-shadow(0 0 20px rgba(0,229,255,.55)) }
+  100%{ transform:translateX(-50%) scale(1); filter:drop-shadow(0 0 0 rgba(0,229,255,0)) }
+}
+@keyframes spin{ to{ transform: rotate(360deg) } }
+@keyframes breathe{ 0%,100%{ transform: scale(1.01) } 50%{ transform: scale(1.04) } }
+
+@media (max-width:400px){
+  .logo-zone{ width:78vw }
+  .pill{ padding:10px 12px; font-size:15px }
+}
 </style>
 </head>
 <body>
@@ -87,34 +153,37 @@ body{ margin:0; color:var(--txt);
     <button onclick="selectPay('gotówka')">Płatność: Gotówka</button>
   </div>
 
-  <!-- Baner do odblokowania autoplay -->
   <div id="audioToast" class="toast">🔊 Stuknij, aby odtworzyć komunikat</div>
 
-  <!-- Logo + rings -->
-  <div id="appRoot">
-    <div class="logo-wrap" id="logo" onclick="toggleVoice()">
-      <div class="rings"><div class="ring r1"></div><div class="ring r2"></div><div class="ring r3"></div></div>
-      <svg class="logo-svg" viewBox="0 0 768 1152" aria-label="FreeFlow logo">
-        <defs>
-          <filter id="removeBlack" color-interpolation-filters="sRGB">
-            <feColorMatrix type="matrix" values="
-              0.2126 0.7152 0.0722 0 0
-              0.2126 0.7152 0.0722 0 0
-              0.2126 0.7152 0.0722 0 0
-              0       0       0       1 0" result="lum"/>
-            <feComponentTransfer in="lum" result="a">
-              <feFuncR type="identity"/><feFuncG type="identity"/><feFuncB type="identity"/>
-              <feFuncA type="linear" slope="5" intercept="-0.9"/>
-            </feComponentTransfer>
-            <feComposite operator="in" in="SourceGraphic" in2="a"/>
-          </filter>
-        </defs>
-        <image href="https://raw.githubusercontent.com/ndoemo02/Freeflo/main/Freeflow-logo.png"
-               x="0" y="0" width="768" height="1152" preserveAspectRatio="xMidYMid meet" filter="url(#removeBlack)"/>
-      </svg>
-    </div>
+  <!-- STREFA LOGO -->
+  <div class="logo-zone" id="logoZone" onclick="toggleVoice()">
+    <!-- Obraz z progiem czerni (SVG) -->
+    <svg class="logo-svg" viewBox="0 0 768 1152" aria-hidden="true">
+      <defs>
+        <filter id="removeBlack" color-interpolation-filters="sRGB">
+          <feColorMatrix type="matrix" values="
+            0.2126 0.7152 0.0722 0 0
+            0.2126 0.7152 0.0722 0 0
+            0.2126 0.7152 0.0722 0 0
+            0       0       0       1 0" result="lum"/>
+          <feComponentTransfer in="lum" result="a">
+            <feFuncR type="identity"/><feFuncG type="identity"/><feFuncB type="identity"/>
+            <feFuncA type="linear" slope="5" intercept="-0.9"/>
+          </feComponentTransfer>
+          <feComposite operator="in" in="SourceGraphic" in2="a"/>
+        </filter>
+      </defs>
+      <image href="https://raw.githubusercontent.com/ndoemo02/Freeflo/main/Freeflow-logo.png"
+             x="0" y="0" width="768" height="1152" preserveAspectRatio="xMidYMid meet" filter="url(#removeBlack)"/>
+    </svg>
+
+    <!-- Kropla (maskowana warstwa – klikalny „przycisk”) -->
+    <div class="droplet"></div>
+    <!-- Fale/obramówka w KSZTAŁCIE KROPLI -->
+    <div class="wave"></div>
   </div>
 
+  <!-- DOLNE PRZYCISKI -->
   <div class="bottom-bar">
     <button class="pill" onclick="quickIntent('Jedzenie')">🍽️ Jedzenie</button>
     <button class="pill" onclick="quickIntent('Taxi')">🚕 Taxi</button>
@@ -124,7 +193,7 @@ body{ margin:0; color:var(--txt);
 <script>
 let cart = 0;
 let recording = false;
-let introSpoken = false; // pilnujemy, by intro padło przynajmniej raz
+let introSpoken = false;
 
 /* Topbar */
 function toggleMenu(){ document.getElementById('mainMenu').classList.toggle('open'); }
@@ -137,26 +206,24 @@ function quickIntent(kind){
   speak(`Wybrano: ${kind}. Dodano do koszyka.`);
 }
 
-/* Voice toggle */
+/* Voice ON/OFF */
 function toggleVoice(){
-  // Jeśli intro nie poleciało (autoplay zablokowany), puść je teraz
-  if(!introSpoken){ sayIntro(); }
-
+  if(!introSpoken){ sayIntro(); } // jeśli intro jeszcze nie padło, puść je najpierw
   recording = !recording;
-  const root = document.body;
-  root.classList.toggle('recording', recording);
-  root.classList.add('clicked'); setTimeout(()=>root.classList.remove('clicked'), 500);
+  document.body.classList.toggle('recording', recording);
+  document.body.classList.add('clicked');
+  setTimeout(()=>document.body.classList.remove('clicked'), 500);
 
   if(recording){
     speak('Nagrywanie włączone. Słucham.');
-    // startRecording(); // TODO: tu podłączysz realny capture
+    // startRecording(); // TU podepniesz realny capture
   }else{
     speak('Nagrywanie wyłączone.');
     // stopRecording();
   }
 }
 
-/* TTS (damski PL gdy dostępny) */
+/* TTS damski PL */
 function speak(text){
   try{
     const u = new SpeechSynthesisUtterance(text);
@@ -166,7 +233,7 @@ function speak(text){
     const anyPL = voices.find(v => v.lang.startsWith('pl'));
     u.voice = prefer || anyPL || null;
     u.rate = 1; u.pitch = 1; u.volume = 1;
-    speechSynthesis.cancel(); // czyścimy kolejkę
+    speechSynthesis.cancel();
     speechSynthesis.speak(u);
   }catch(e){ console.warn('SpeechSynthesis error:', e); }
 }
@@ -183,7 +250,8 @@ function showToast(){ document.getElementById('audioToast').classList.add('show'
 function hideToast(){ document.getElementById('audioToast').classList.remove('show'); }
 
 function attachUnlockOnce(){
-  const unlock = ()=>{ sayIntro();
+  const unlock = ()=>{
+    sayIntro();
     window.removeEventListener('pointerdown', unlock, {passive:true});
     window.removeEventListener('touchstart', unlock, {passive:true});
     window.removeEventListener('click', unlock, {passive:true});
@@ -193,13 +261,13 @@ function attachUnlockOnce(){
   window.addEventListener('click', unlock, {passive:true});
 }
 
-async function tryAutoplay(){
-  // Spróbuj od razu
+function tryAutoplay(){
+  // Spróbuj od razu przemówić
   speak(introText);
-  // Daj 700ms na ewentualne rozpoczęcie mowy
+  // Po krótkiej chwili sprawdź, czy przemówiło
   setTimeout(()=>{
     if(!speechSynthesis.speaking){
-      // Autoplay najpewniej zablokowany – pokaż baner i czekaj na stuknięcie
+      // Autoplay zablokowany – pokaż baner i czekaj na pierwszy tap
       showToast();
       attachUnlockOnce();
     }else{
@@ -209,7 +277,7 @@ async function tryAutoplay(){
   }, 700);
 }
 
-/* Czasem głosy ładują się asynchronicznie (iOS/webview) */
+/* iOS/webview potrafi ładować głosy asynchronicznie */
 if(typeof speechSynthesis !== 'undefined'){
   speechSynthesis.onvoiceschanged = ()=>{};
 }
