--- a/index.html
+++ b/index.html
@@ -5,138 +5,116 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>FreeFlow • Voice to order</title>
   <link rel="icon" href="./Freeflow-logo.png" />
+  <!-- Nowoczesny font dla brandu -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg:#0b0f14; --panel:#121821; --panel2:#16202c;
       --text:#e9eef6; --muted:#93a1b4; --brand:#ff7a00;
-      --glow:#ff7a00aa; --ring:#2a3545;
+      --menu-bg: rgba(0,0,0,.30); --menu-bdr: rgba(255,255,255,.08);
+      --neon:#00d1ff;
     }
     html,body{height:100%}
     body{
       margin:0; font-family: ui-sans-serif,system-ui,Segoe UI,Roboto,Helvetica,Arial;
-      background: radial-gradient(1200px 800px at 50% -20%, #182131 0%, #0d141d 50%, var(--bg) 100%);
       color:var(--text);
+      /* TŁO z głównego katalogu (bez blur/siatek) */
+      background: url("./Background.png") center/cover fixed no-repeat #0b0f14;
     }
 
-    /* ===== efekty glass + neon ===== */
-    .glass{
-      background: rgba(255,255,255,.08);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      border:1px solid rgba(255,255,255,.12);
-      border-radius:15px;
-      box-shadow: 0 4px 30px rgba(0,0,0,.25);
+    /* Transparent UI */
+    .glass{ background: rgba(0,0,0,.18); backdrop-filter: blur(2px);
+      -webkit-backdrop-filter: blur(2px); border:1px solid rgba(255,255,255,.06);
+      border-radius:14px; box-shadow:0 2px 18px rgba(0,0,0,.25);
     }
-    .glow{
-      box-shadow:
-        0 0 10px rgba(0,255,255,.15),
-        0 0 20px rgba(0,255,255,.12),
-        0 0 30px rgba(0,255,255,.08);
-      transition: box-shadow .3s ease, transform .15s ease;
-    }
-    .glow:hover{
-      box-shadow:
-        0 0 15px rgba(0,255,255,.25),
-        0 0 30px rgba(0,255,255,.18),
-        0 0 45px rgba(0,255,255,.12);
-      transform: translateY(-1px);
-    }
-    /* ================================= */
 
-    /* top bar */
+    /* Topbar */
     .topbar{
       display:flex; align-items:center; justify-content:space-between;
-      padding:16px 18px; position:sticky; top:0; z-index:20;
-      background: linear-gradient(180deg, rgba(13,20,29,.9), rgba(13,20,29,.65), rgba(13,20,29,0));
-      backdrop-filter: blur(6px);
+      padding:14px 16px; position:sticky; top:0; z-index:50;
+      background: linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,.22), rgba(0,0,0,0));
+      backdrop-filter: blur(3px);
     }
-    .brand{ display:flex; align-items:center; gap:10px; font-weight:800; font-size:26px; }
+    .brand{ display:flex; align-items:center; gap:10px; font-family:'Poppins',sans-serif; font-weight:700; font-size:26px; }
     .brand img{width:36px; height:36px; border-radius:8px}
     .brand .accent{color:var(--brand)}
     .claim{font-size:12px; color:var(--muted); margin-top:-6px}
     .actions{display:flex; gap:10px}
     .iconbtn{
-      width:44px; height:44px; border-radius:12px; border:1px solid #243044;
-      background: linear-gradient(180deg,#17202d,#111722);
-      color:#cfe2ff; display:grid; place-items:center; cursor:pointer;
+      width:44px; height:44px; border-radius:12px; border:1px solid rgba(255,255,255,.06);
+      background: rgba(0,0,0,.18); color:#cfe2ff; display:grid; place-items:center; cursor:pointer;
       box-shadow: 0 4px 20px rgba(0,0,0,.35);
     }
     .badge{
       position:absolute; margin-top:-28px; margin-left:26px;
       background:var(--brand); color:#111; font-weight:700; font-size:12px;
       width:22px; height:22px; border-radius:50%; display:grid; place-items:center;
-      box-shadow:0 0 16px var(--glow);
+      box-shadow:0 0 16px #ff7a0033;
     }
 
-    /* hero */
-    .wrap{max-width:980px; margin:0 auto; padding: 10px 16px 40px}
+    /* Dropdown menu (kontekstowe) */
+    .menu-wrap{ position:relative; }
+    .dropdown{ position:absolute; right:0; top:48px; min-width:220px; display:none;
+      background: var(--menu-bg); border:1px solid var(--menu-bdr); border-radius:12px;
+      box-shadow:0 12px 40px rgba(0,0,0,.35); overflow:hidden; z-index:60;
+    }
+    .dropdown.open{ display:block; }
+    .dd-item{ padding:12px 14px; font-size:15px; display:flex; align-items:center; justify-content:space-between; gap:10px; cursor:pointer; }
+    .dd-item:hover{ background: rgba(255,255,255,.06); }
+    .dd-sub{ display:none; border-top:1px solid var(--menu-bdr); }
+    .dd-item.expand::after{ content:'▸'; opacity:.6; }
+    .dd-item.expand.open::after{ content:'▾'; }
+    .dd-sub.open{ display:block; }
+    .dd-sub .dd-item{ padding-left:22px; }
+
+    /* Layout */
+    .wrap{max-width:980px; margin:0 auto; padding: 10px 16px 36px}
     h1{font-size:42px; line-height:1.05; margin:8px 0 6px}
     .sub{color:var(--muted); margin-bottom:18px}
 
+    /* HERO – tylko klikalne logo, bez obwódki/koła */
     .hero{
       margin:14px auto 18px; width:min(92vw,640px); aspect-ratio:1/1;
-      border-radius:50%;
-      background: radial-gradient(60% 60% at 50% 45%, #1f2937 0%, #0f1722 55%, #0b1018 100%);
-      border:1px solid var(--ring);
-      display:grid; place-items:center; position:relative;
-      box-shadow: inset 0 0 120px #000a, 0 40px 120px #000a;
+      display:grid; place-items:center; position:relative; background:transparent; border:none; box-shadow:none;
     }
-    .hero .logo{
-      width:76%; max-width:520px; filter: drop-shadow(0 8px 26px rgba(0,0,0,.45));
-      user-select:none; pointer-events:none;
+    .logoBtn{ border:none; background:transparent; padding:0; cursor:pointer; display:grid; place-items:center; }
+    .logo{
+      width:76%; max-width:520px; user-select:none; pointer-events:none;
+      /* niebieski, delikatny neon tylko na krawędziach PNG (alpha) */
+      filter: drop-shadow(0 0 0px rgba(0,209,255,.0));
+      animation: neonPulse 2.2s ease-in-out infinite;
     }
-    #micBtn{
-      position:absolute; bottom:9%; left:50%; transform: translateX(-50%);
-      padding:14px 18px; border-radius:18px; cursor:pointer; border:1px solid #2a3548;
-      background: rgba(20,27,38,.8); color:var(--text); font-size:22px;
-      display:flex; align-items:center; gap:10px;
-      box-shadow: 0 12px 40px rgba(0,0,0,.45), 0 0 0 0 rgba(0,255,128,0);
-      transition: box-shadow .25s ease, transform .15s ease;
-    }
-    #micBtn:hover{ transform: translateX(-50%) scale(1.02); }
-    #micBtn.recording{
-      animation: pulse 1.6s infinite;
-      border-color:#22d37f77;
-      box-shadow: 0 12px 40px rgba(0,0,0,.55), 0 0 26px #22d37f44;
-    }
-    @keyframes pulse{
-      0%{ box-shadow:0 12px 40px rgba(0,0,0,.55), 0 0 0 0 rgba(34,211,127,.55); }
-      70%{ box-shadow:0 12px 40px rgba(0,0,0,.55), 0 0 0 16px rgba(34,211,127,0); }
-      100%{ box-shadow:0 12px 40px rgba(0,0,0,.55), 0 0 0 0 rgba(34,211,127,0); }
+    @keyframes neonPulse{
+      0%   { filter: drop-shadow(0 0 0px rgba(0,209,255,.0));    transform: scale(1); }
+      50%  { filter: drop-shadow(0 0 14px rgba(0,209,255,.38));  transform: scale(1.012); }
+      100% { filter: drop-shadow(0 0 0px rgba(0,209,255,.0));    transform: scale(1); }
     }
 
-    /* transcript bubble */
+    /* Bąbel transkrypcji – mocno transparentny */
     .bubble{
-      margin:18px auto 0; max-width:900px; padding:18px 16px; min-height:40px;
-      background: linear-gradient(180deg,#111824,#0e1520); border:1px solid #243044;
-      border-radius:18px; color:var(--text); font-size:18px;
-      box-shadow: inset 0 0 24px #0008, 0 8px 40px #000a;
+      margin:8px auto 0; max-width:900px; padding:16px 14px; min-height:40px;
+      background: rgba(0,0,0,.18); border:1px solid rgba(255,255,255,.06);
+      border-radius:14px; color:var(--text); font-size:18px;
+      box-shadow: inset 0 0 24px #0005, 0 8px 40px #000a;
     }
 
-    /* bottom buttons (równe) */
+    /* Dolne kafelki (na razie emoji, potem podmienimy na SVG) */
     .bottom-buttons{
-      display:flex; flex-wrap:wrap; justify-content:center; gap:12px; margin-top:16px;
+      display:flex; flex-wrap:wrap; justify-content:center; gap:12px; margin-top:14px;
     }
     .bottom-buttons button{
       flex:1 1 calc(33.333% - 12px); max-width:180px; min-width:120px; height:56px;
       display:flex; align-items:center; justify-content:center; gap:10px;
       font-size:18px; border-radius:14px;
-      background: linear-gradient(180deg,#161e2a,#101723);
-      color:#e8eefb; border:1px solid #243044; cursor:pointer;
-      box-shadow: 0 10px 32px rgba(0,0,0,.35);
+      background: rgba(0,0,0,.18); color:#e8eefb; border:1px solid rgba(255,255,255,.06);
+      cursor:pointer; box-shadow: 0 10px 32px rgba(0,0,0,.35);
       transition: transform .15s ease, background .2s ease;
     }
-    .bottom-buttons button:hover{ transform: translateY(-1px); background: #182233; }
+    .bottom-buttons button:hover{ transform: translateY(-1px); background: rgba(0,0,0,.22); }
     .bottom-buttons .primary{ outline:2px solid #ff7a00aa; box-shadow:0 0 20px #ff7a0033 inset, 0 10px 32px #000; }
-
-    /* glass + glow aplikacja na wybrane elementy */
-    .iconbtn.glass.glow{ border-color:rgba(255,255,255,.16); }
-    #micBtn.glass.glow{ background:rgba(20,27,38,.55); }
 
     @media (max-width:480px){
       h1{font-size:36px}
       .bottom-buttons button{height:52px; font-size:16px; min-width:110px}
-      #micBtn{font-size:20px}
     }
   </style>
 </head>
@@ -151,10 +129,26 @@
       </div>
       <div class="claim">Voice to order</div>
     </div>
+
     <div class="actions">
-      <button class="iconbtn glass glow" id="menuBtn" aria-label="Menu">☰</button>
+      <!-- Menu kontekstowe -->
+      <div class="menu-wrap">
+        <button class="iconbtn" id="menuBtn" aria-label="Menu">☰</button>
+        <div id="dropdown" class="dropdown glass">
+          <div class="dd-item expand" id="payExpand">Płatność</div>
+          <div class="dd-sub" id="paySub">
+            <div class="dd-item" data-pay="card">Karta</div>
+            <div class="dd-item" data-pay="blik">BLIK</div>
+            <div class="dd-item" data-pay="paypal">PayPal</div>
+          </div>
+          <div class="dd-item" id="ordersBtn">Twoje zamówienia</div>
+          <div class="dd-item" id="settingsBtn">Ustawienia</div>
+          <div class="dd-item" id="helpBtn">Pomoc</div>
+        </div>
+      </div>
+
       <div style="position:relative">
-        <button class="iconbtn glass glow" id="cartBtn" aria-label="Koszyk">🛒</button>
+        <button class="iconbtn" id="cartBtn" aria-label="Koszyk">🛒</button>
         <div class="badge" id="cartBadge">0</div>
       </div>
     </div>
@@ -164,49 +158,63 @@
     <h1>Złóż zamówienie</h1>
     <div class="sub">Taxi, posiłek, a może nocleg?</div>
 
-    <!-- Hero z logo + mic -->
+    <!-- Hero: tylko klikalne logo -->
     <section class="hero">
-      <img class="logo" src="./Freeflow-logo.png" alt="FreeFlow" />
-      <button id="micBtn" type="button" class="glass glow">🎤 Dotknij logo i mów…</button>
+      <button id="micBtn" type="button" class="logoBtn" aria-label="Naciśnij, aby mówić">
+        <img class="logo" src="./Freeflow-logo.png" alt="FreeFlow" />
+      </button>
     </section>
 
     <!-- Transkrypcja / odpowiedzi -->
-    <div id="transcript" class="bubble glass glow">Transkrypcja pojawi się tutaj…</div>
+    <div id="transcript" class="bubble glass">Transkrypcja pojawi się tutaj…</div>
 
-    <!-- Przyciski skrótów -->
-    <div class="bottom-buttons" style="margin-bottom:36px">
-      <button class="primary glass glow" data-quick="Jedzenie">🍽️ <span>Jedzenie</span></button>
-      <button class="glass glow" data-quick="Taxi">🚕 <span>Taxi</span></button>
-      <button class="glass glow" data-quick="Hotel">🏠 <span>Hotel</span></button>
+    <!-- Przyciski skrótów (placeholdery) -->
+    <div class="bottom-buttons" style="margin-bottom:32px">
+      <button class="primary glass" data-quick="Jedzenie">🍽️ <span>Jedzenie</span></button>
+      <button class="glass" data-quick="Taxi">🚕 <span>Taxi</span></button>
+      <button class="glass" data-quick="Hotel">🏠 <span>Hotel</span></button>
     </div>
   </main>
 
-  <!-- Audio do TTS -->
   <audio id="ttsPlayer" preload="auto"></audio>
 
-  <!-- Logika asystenta -->
+  <!-- Asystent (logika SR/ASR/Chat/TTS) -->
   <script src="./freeflow-assistant.js"></script>
 
-  <!-- Mini logika UI (niemodułowa) -->
-  <script>
-    const badgeEl = document.getElementById('cartBadge');
-    const cartBtn = document.getElementById('cartBtn');
-    cartBtn.addEventListener('click',()=> alert('Koszyk (coming soon)'));
-    document.getElementById('menuBtn').addEventListener('click',()=> alert('Menu (coming soon)'));
+  <!-- Mini logika UI: menu, koszyk, quick actions -->
+  <script type="module">
+    // Dropdown
+    const menuBtn = document.getElementById('menuBtn');
+    const dropdown = document.getElementById('dropdown');
+    const payExpand = document.getElementById('payExpand');
+    const paySub = document.getElementById('paySub');
 
-    // quick actions → wysyłamy gotowe prompt’y do asystenta
-    document.querySelectorAll('[data-quick]').forEach(btn=>{
-      btn.addEventListener('click', ()=>{
-        const t = btn.dataset.quick;
-        if (window.sendToAssistant) {
-          window.sendToAssistant(`Zamówienie: ${t}. Pomóż dokończyć szczegóły.`);
-        }
+    menuBtn.addEventListener('click', (e)=>{
+      e.stopPropagation();
+      dropdown.classList.toggle('open');
+    });
+    payExpand.addEventListener('click', (e)=>{
+      e.stopPropagation();
+      payExpand.classList.toggle('open');
+      paySub.classList.toggle('open');
+    });
+    document.addEventListener('click', (e)=>{
+      if (!dropdown.contains(e.target) && e.target !== menuBtn) {
+        dropdown.classList.remove('open');
+        payExpand.classList.remove('open');
+        paySub.classList.remove('open');
+      }
+    });
+
+    // Obsługa wyboru płatności (placeholder)
+    dropdown.querySelectorAll('[data-pay]').forEach(el=>{
+      el.addEventListener('click', ()=>{
+        const method = el.getAttribute('data-pay');
+        alert('Wybrano płatność: ' + method.toUpperCase());
       });
     });
-  </script>
 
-  <!-- Koszyk (moduł) -->
-  <script type="module">
+    // Koszyk (prosty localStorage – jak miałeś wcześniej)
     import { addToCart, getCart, cartCount, clearCart } from './cart.js';
 
     const badge = document.getElementById('cartBadge');
@@ -226,7 +234,20 @@
       alert(items.length ? items.map(i=>`• ${i.type} – ${i.name}`).join('\n') : 'Koszyk jest pusty');
     });
 
-    window.FreeFlowCart = { addToCart, clearCart, getCart };
+    // Placeholdery
+    document.getElementById('ordersBtn').addEventListener('click', ()=> alert('Twoje zamówienia (wkrótce)'));
+    document.getElementById('settingsBtn').addEventListener('click',()=> alert('Ustawienia (wkrótce)'));
+    document.getElementById('helpBtn').addEventListener('click',    ()=> alert('Pomoc (FAQ, kontakt) – wkrótce'));
+
+    // Quick prompt do asystenta
+    document.querySelectorAll('[data-quick]').forEach(btn=>{
+      btn.addEventListener('click', ()=>{
+        const t = btn.dataset.quick;
+        if (window.sendToAssistant) {
+          window.sendToAssistant(`Zamówienie: ${t}. Pomóż dokończyć szczegóły.`);
+        }
+      });
+    });
   </script>
 </body>
 </html>
